# Jammer

./: .gitignore  CMakeLists.txt  Jammer.qmlproject  Jammer.qmlproject.qtds  README.md  images.qrc  main.cpp  main.qml  qmlmodules  qtquickcontrols2.conf
components/: Base.qml  ButtonCustom.qml  Joystick.qml  ListMenu.qml  MyProgressBar.qml  PASettingsMini.qml  PAStatus.qml  PAStatusMini.qml  PASwitch.qml  PowAmpSettings.qml  ScreenPowerAmpSettings.qml  ScreenSplash.qml  SignalBar.qml  StatusSignal.qml  TextCustom.qml  ToggleButton.qml  VideoComponent.qml
content/: App.qml  BaseScreen.ui.qml  CMakeLists.txt  MyProgressBar.qml  Screen01.ui.qml  Screen02.qml  SignalBar.qml  VideoComponent.qml
docs/: flowdiagram.pptx
imports/: CMakeLists.txt
imports/Jammer/: CMakeLists.txt  Constants.qml  qmldir
imports/Jammer/designer/: plugin.metainfo
simulation/: test.txt  testfile.ptp  updated_arduino_data.ptp
src/: BackendSingleton.cpp  BackendSingleton.h  DataAcquisition.cpp  DataAcquisition.h  DataSingle.cpp  DataSingle.h  SerialPort.cpp  SerialPort.h  Utilities.cpp  Utilities.h  import_qml_plugins.h  main.cpp
